--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=7.1.0",
-        "laravel/framework": ">= 5.7",
+        "laravel/framework": ">= 5.7 < 8.*",
         "laravel/tinker": ">= 1.0"
     },
     "autoload": {
