--- a/composer.json
+++ b/composer.json
@@ -3,18 +3,18 @@
     "description": "Laravel DB internationalization package (v8)",
     "type": "package",
     "license": "GPL-3.0-or-later",
-    "version": "1.0.3",
+    "version": "1.1.1",
     "authors": [
         {
             "name": "Sergei Shubin",
             "email": "is.captain.fail@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
-        "php": ">=7.3.0",
-        "laravel/framework": ">= 8.0",
-        "laravel/tinker": ">= 1.0"
+        "php": ">=8.3.0",
+        "laravel/framework": ">= 10.*|>=11.*|>=12.*",
+        "laravel/tinker": ">= 2.*"
     },
     "autoload": {
         "files": [
