--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=8.3.0",
-        "laravel/framework": ">= 10.*|>=11.*|>=12.*",
-        "laravel/tinker": ">= 2.*"
+        "laravel/framework": ">= 10.0|>=11.0|>=12.0",
+        "laravel/tinker": ">= 2.0|>= 2.4|>= 2.9"
     },
     "autoload": {
         "files": [
